# MIPT

./: README.md
2017-2018/MVS/07.10.2017/: Helper.cpp  Helper.h  main.cpp
2017-2018/MVS/14.10.2017/: CMakeLists.txt  lock_free_stack.h  main.cpp
2017-2018/MVS/21.10.2017/: CMakeLists.txt
2017-2018/MVS/23.09.17/: CMakeLists.txt  matrix_multi.cpp  step_assot_cache.cpp
2017-2018/MVS/28.10.2017-kr/: CMakeLists.txt  README.txt  life_game.h  main.cpp
2017-2018/SETI/contest/: CMakeLists.txt  broadcast.cpp  host.cpp  ip.cpp  solaris.ans  solaris.cpp
2017-2018/SETI/workspace/: output
2017-2018/complexity/WidgersonAlgorithm/: WigdersonAlgorithm.py  testing.html  testing.ipynb
2017-2018/complexity/WidgersonAlgorithm/tex/: alg_sample.eps  main.tex  references.bib
2017-2018/metopty/: metopty_practice  simplex.py
2020-2021/promprog/wordcount/: README.md  mapper.sh  reducer.awk  run.sh
2020-2021/promprog/wordcount/data/: LOTR
MVS/07.10.2017/: CMakeLists.txt  Helper.cpp  main.cpp
MVS/30.09.17/: CMakeLists.txt  main.cpp
